--- a/App/TrayWindow.xaml
+++ b/App/TrayWindow.xaml
@@ -159,9 +159,10 @@
         <HyperlinkButton
             Margin="-10,0,-10,0"
             HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Left">
+            HorizontalContentAlignment="Left"
+            Click="{x:Bind SignIn_Click}">
 
-            <TextBlock Text="Sign out" Foreground="{ThemeResource DefaultTextForegroundThemeBrush}" />
+            <TextBlock Text="Sign in" Foreground="{ThemeResource DefaultTextForegroundThemeBrush}" />
         </HyperlinkButton>
 
         <!-- For some strange reason, setting OpenCommand and ExitCommand here doesn't work, see .cs -->
