--- a/App/Views/Pages/TrayWindowMainPage.xaml
+++ b/App/Views/Pages/TrayWindowMainPage.xaml
@@ -4,9 +4,9 @@
     x:Class="Coder.Desktop.App.Views.Pages.TrayWindowMainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:models="using:Coder.Desktop.App.Models"
     xmlns:controls="using:Coder.Desktop.App.Controls"
     xmlns:converters="using:Coder.Desktop.App.Converters"
+    xmlns:viewModels="using:Coder.Desktop.App.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -14,6 +14,14 @@
     <Page.Resources>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter" />
+
+        <converters:VpnLifecycleToBoolConverter x:Key="ConnectingBoolConverter" Starting="true" Stopping="true" />
+        <converters:VpnLifecycleToBoolConverter x:Key="NotConnectingBoolConverter" Started="true" Stopped="true" />
+        <converters:VpnLifecycleToVisibilityConverter x:Key="StartedVisibilityConverter" Started="true" />
+        <converters:VpnLifecycleToVisibilityConverter x:Key="NotStartedVisibilityConverter" Starting="true"
+                                                      Stopping="true" Stopped="true" />
+
+        <converters:AgentStatusToColorConverter x:Key="AgentStatusToColorConverter" />
         <converters:BoolToObjectConverter x:Key="ShowMoreLessTextConverter" TrueValue="Show less"
                                           FalseValue="Show more" />
     </Page.Resources>
@@ -39,7 +47,7 @@
                 VerticalAlignment="Center" />
             <ProgressRing
                 Grid.Column="1"
-                IsActive="{x:Bind ViewModel.VpnConnecting, Mode=OneWay}"
+                IsActive="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource ConnectingBoolConverter}, Mode=OneWay}"
                 Width="24"
                 Height="24"
                 Margin="10,0"
@@ -49,8 +57,8 @@
                 OnContent=""
                 OffContent=""
                 IsOn="{x:Bind ViewModel.VpnSwitchOn, Mode=TwoWay}"
-                IsEnabled="{x:Bind ViewModel.VpnSwitchEnabled, Mode=OneWay}"
-                Toggled="{x:Bind ViewModel.ActiveSwitch_Toggled}"
+                IsEnabled="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource NotConnectingBoolConverter}, Mode=OneWay}"
+                Toggled="{x:Bind ViewModel.VpnSwitch_Toggled}"
                 Margin="0,0,-110,0"
                 HorizontalAlignment="Right" />
         </Grid>
@@ -66,12 +74,12 @@
             Text="Enable CoderVPN to view your workspaces."
             TextWrapping="Wrap"
             Margin="0,0,0,6"
-            Visibility="{x:Bind ViewModel.VpnConnected, Converter={StaticResource InverseBoolToVisibilityConverter}, Mode=OneWay}"
+            Visibility="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource NotStartedVisibilityConverter}, Mode=OneWay}"
             Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
 
         <StackPanel
             Orientation="Vertical"
-            Visibility="{x:Bind ViewModel.VpnConnected, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}">
+            Visibility="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource StartedVisibilityConverter}, Mode=OneWay}">
 
             <TextBlock
                 Text="There are no workspace agents to display."
@@ -89,7 +97,7 @@
                 </ItemsRepeater.Layout>
 
                 <ItemsRepeater.ItemTemplate>
-                    <DataTemplate x:DataType="models:AgentModel">
+                    <DataTemplate x:DataType="viewModels:AgentViewModel">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -115,7 +123,7 @@
                                         Margin="0,1,0,0">
 
                                         <Ellipse
-                                            Fill="{x:Bind ConnectionStatusColor, Mode=OneWay}"
+                                            Fill="{x:Bind ConnectionStatus, Converter={StaticResource AgentStatusToColorConverter}, Mode=OneWay}"
                                             Opacity="0.2"
                                             Width="14"
                                             Height="14"
@@ -123,7 +131,7 @@
                                             Canvas.Top="0" />
 
                                         <Ellipse
-                                            Fill="{x:Bind ConnectionStatusColor, Mode=OneWay}"
+                                            Fill="{x:Bind ConnectionStatus, Converter={StaticResource AgentStatusToColorConverter}, Mode=OneWay}"
                                             Width="8"
                                             Height="8"
                                             VerticalAlignment="Center"
@@ -173,7 +181,7 @@
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Left"
                 Visibility="{x:Bind ViewModel.AgentOverflow, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
-                Command="{x:Bind ViewModel.ShowMoreLessAgentsCommand}">
+                Command="{x:Bind ViewModel.ToggleShowAllAgentsCommand}">
 
                 <TextBlock
                     Text="{x:Bind ViewModel.ShowAllAgents, Converter={StaticResource ShowMoreLessTextConverter}, Mode=OneWay}"
