--- a/App/Views/Pages/TrayWindowMainPage.xaml
+++ b/App/Views/Pages/TrayWindowMainPage.xaml
@@ -57,8 +57,8 @@
                 Grid.Column="2"
                 OnContent=""
                 OffContent=""
+                IsOn="{x:Bind ViewModel.VpnSwitchActive, Mode=TwoWay}"
                 IsEnabled="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource NotConnectingBoolConverter}, Mode=OneWay}"
-                Loaded="{x:Bind ViewModel.VpnSwitch_Loaded}"
                 Toggled="{x:Bind ViewModel.VpnSwitch_Toggled}"
                 Margin="0,0,-110,0"
                 HorizontalAlignment="Right" />
