--- a/App/Views/Pages/TrayWindowMainPage.xaml
+++ b/App/Views/Pages/TrayWindowMainPage.xaml
@@ -13,15 +13,11 @@
 
     <Page.Resources>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
-        <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter" />
 
         <converters:VpnLifecycleToBoolConverter x:Key="ConnectingBoolConverter" Unknown="true" Starting="true"
                                                 Stopping="true" />
         <converters:VpnLifecycleToBoolConverter x:Key="NotConnectingBoolConverter" Started="true" Stopped="true" />
         <converters:VpnLifecycleToBoolConverter x:Key="StoppedBoolConverter" Stopped="true" />
-        <converters:VpnLifecycleToVisibilityConverter x:Key="StartedVisibilityConverter" Started="true" />
-        <converters:VpnLifecycleToVisibilityConverter x:Key="NotStartedVisibilityConverter" Starting="true"
-                                                      Stopping="true" Stopped="true" />
 
         <converters:AgentStatusToColorConverter x:Key="AgentStatusToColorConverter" />
         <converters:BoolToObjectConverter x:Key="ShowMoreLessTextConverter" TrueValue="Show less"
@@ -68,128 +64,131 @@
         <controls:HorizontalRule />
 
         <TextBlock
-            Text="Workspaces"
-            FontWeight="semibold"
-            Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+            Text="{x:Bind ViewModel.VpnFailedMessage, Mode=OneWay}"
+            Foreground="Red"
+            Margin="0,6,0,6"
+            TextWrapping="Wrap"
+            Visibility="{x:Bind ViewModel.ShowFailedSection, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}" />
 
         <TextBlock
             Text="Enable CoderVPN to view your workspaces."
             TextWrapping="Wrap"
-            Margin="0,0,0,6"
-            Visibility="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource NotStartedVisibilityConverter}, Mode=OneWay}"
+            Margin="0,6,0,6"
+            Visibility="{x:Bind ViewModel.ShowEnableSection, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
             Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
 
-        <StackPanel
-            Orientation="Vertical"
-            Visibility="{x:Bind ViewModel.VpnLifecycle, Converter={StaticResource StartedVisibilityConverter}, Mode=OneWay}">
+        <TextBlock
+            Text="Workspaces"
+            FontWeight="semibold"
+            Visibility="{x:Bind ViewModel.ShowWorkspacesHeader, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+            Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+
+        <TextBlock
+            Text="There are no workspace agents to display."
+            TextWrapping="Wrap"
+            Margin="0,0,0,6"
+            Visibility="{x:Bind ViewModel.ShowNoAgentsSection, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+            Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+
+        <ItemsRepeater
+            ItemsSource="{x:Bind ViewModel.VisibleAgents, Mode=OneWay}"
+            Visibility="{x:Bind ViewModel.ShowAgentsSection, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}">
+
+            <ItemsRepeater.Layout>
+                <StackLayout Orientation="Vertical" />
+            </ItemsRepeater.Layout>
+
+            <ItemsRepeater.ItemTemplate>
+                <DataTemplate x:DataType="viewModels:AgentViewModel">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <HyperlinkButton
+                            Grid.Column="0"
+                            NavigateUri="{x:Bind DashboardUrl, Mode=OneWay}"
+                            Margin="-12,0,0,0"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Left">
+
+                            <StackPanel
+                                Orientation="Horizontal"
+                                HorizontalAlignment="Stretch"
+                                Spacing="10">
+
+                                <Canvas
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Height="14" Width="14"
+                                    Margin="0,1,0,0">
+
+                                    <Ellipse
+                                        Fill="{x:Bind ConnectionStatus, Converter={StaticResource AgentStatusToColorConverter}, Mode=OneWay}"
+                                        Opacity="0.2"
+                                        Width="14"
+                                        Height="14"
+                                        Canvas.Left="0"
+                                        Canvas.Top="0" />
+
+                                    <Ellipse
+                                        Fill="{x:Bind ConnectionStatus, Converter={StaticResource AgentStatusToColorConverter}, Mode=OneWay}"
+                                        Width="8"
+                                        Height="8"
+                                        VerticalAlignment="Center"
+                                        Canvas.Left="3"
+                                        Canvas.Top="3" />
+                                </Canvas>
+
+                                <!-- See .cs for why the Loaded event handler is needed -->
+                                <!-- TODO: I couldn't get ellipsis to work without hardcoding a width here -->
+                                <TextBlock
+                                    Loaded="AgentHostnameText_OnLoaded"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Stretch"
+                                    HorizontalTextAlignment="Left"
+                                    TextTrimming="CharacterEllipsis"
+                                    TextWrapping="NoWrap"
+                                    Width="180">
+
+                                    <Run Text="{x:Bind Hostname, Mode=OneWay}"
+                                         Foreground="{ThemeResource DefaultTextForegroundThemeBrush}" />
+                                    <Run Text="{x:Bind HostnameSuffix, Mode=OneWay}"
+                                         Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+                                </TextBlock>
+                            </StackPanel>
+                        </HyperlinkButton>
+
+                        <HyperlinkButton
+                            Grid.Column="1"
+                            x:Name="AgentHostnameCopyButton"
+                            Command="{x:Bind CopyHostnameCommand}"
+                            CommandParameter="{Binding ElementName=AgentHostnameCopyButton}"
+                            Margin="0,0,-12,0"
+                            VerticalAlignment="Stretch">
+
+                            <FontIcon
+                                Glyph="&#xE8C8;"
+                                FontSize="16"
+                                Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+                        </HyperlinkButton>
+                    </Grid>
+                </DataTemplate>
+            </ItemsRepeater.ItemTemplate>
+        </ItemsRepeater>
+
+        <HyperlinkButton
+            Margin="-12,0,-12,0"
+            HorizontalAlignment="Stretch"
+            HorizontalContentAlignment="Left"
+            Visibility="{x:Bind ViewModel.ShowAgentOverflowButton, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+            Command="{x:Bind ViewModel.ToggleShowAllAgentsCommand}">
 
             <TextBlock
-                Text="There are no workspace agents to display."
-                TextWrapping="Wrap"
-                Margin="0,0,0,6"
-                Visibility="{x:Bind ViewModel.NoAgents, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+                Text="{x:Bind ViewModel.ShowAllAgents, Converter={StaticResource ShowMoreLessTextConverter}, Mode=OneWay}"
                 Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
-
-            <ItemsRepeater
-                ItemsSource="{x:Bind ViewModel.VisibleAgents, Mode=OneWay}"
-                Visibility="{x:Bind ViewModel.NoAgents, Converter={StaticResource InverseBoolToVisibilityConverter}, Mode=OneWay}">
-
-                <ItemsRepeater.Layout>
-                    <StackLayout Orientation="Vertical" />
-                </ItemsRepeater.Layout>
-
-                <ItemsRepeater.ItemTemplate>
-                    <DataTemplate x:DataType="viewModels:AgentViewModel">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-
-                            <HyperlinkButton
-                                Grid.Column="0"
-                                NavigateUri="{x:Bind DashboardUrl, Mode=OneWay}"
-                                Margin="-12,0,0,0"
-                                HorizontalAlignment="Stretch"
-                                HorizontalContentAlignment="Left">
-
-                                <StackPanel
-                                    Orientation="Horizontal"
-                                    HorizontalAlignment="Stretch"
-                                    Spacing="10">
-
-                                    <Canvas
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"
-                                        Height="14" Width="14"
-                                        Margin="0,1,0,0">
-
-                                        <Ellipse
-                                            Fill="{x:Bind ConnectionStatus, Converter={StaticResource AgentStatusToColorConverter}, Mode=OneWay}"
-                                            Opacity="0.2"
-                                            Width="14"
-                                            Height="14"
-                                            Canvas.Left="0"
-                                            Canvas.Top="0" />
-
-                                        <Ellipse
-                                            Fill="{x:Bind ConnectionStatus, Converter={StaticResource AgentStatusToColorConverter}, Mode=OneWay}"
-                                            Width="8"
-                                            Height="8"
-                                            VerticalAlignment="Center"
-                                            Canvas.Left="3"
-                                            Canvas.Top="3" />
-                                    </Canvas>
-
-                                    <!-- See .cs for why the Loaded event handler is needed -->
-                                    <!-- TODO: I couldn't get ellipsis to work without hardcoding a width here -->
-                                    <TextBlock
-                                        Loaded="AgentHostnameText_OnLoaded"
-                                        VerticalAlignment="Center"
-                                        HorizontalAlignment="Stretch"
-                                        HorizontalTextAlignment="Left"
-                                        TextTrimming="CharacterEllipsis"
-                                        TextWrapping="NoWrap"
-                                        Width="180">
-
-                                        <Run Text="{x:Bind Hostname, Mode=OneWay}"
-                                             Foreground="{ThemeResource DefaultTextForegroundThemeBrush}" />
-                                        <Run Text="{x:Bind HostnameSuffix, Mode=OneWay}"
-                                             Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
-                                    </TextBlock>
-                                </StackPanel>
-                            </HyperlinkButton>
-
-                            <HyperlinkButton
-                                Grid.Column="1"
-                                x:Name="AgentHostnameCopyButton"
-                                Command="{x:Bind CopyHostnameCommand}"
-                                CommandParameter="{Binding ElementName=AgentHostnameCopyButton}"
-                                Margin="0,0,-12,0"
-                                VerticalAlignment="Stretch">
-
-                                <FontIcon
-                                    Glyph="&#xE8C8;"
-                                    FontSize="16"
-                                    Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
-                            </HyperlinkButton>
-                        </Grid>
-                    </DataTemplate>
-                </ItemsRepeater.ItemTemplate>
-            </ItemsRepeater>
-
-            <HyperlinkButton
-                Margin="-12,10,-12,0"
-                HorizontalAlignment="Stretch"
-                HorizontalContentAlignment="Left"
-                Visibility="{x:Bind ViewModel.AgentOverflow, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
-                Command="{x:Bind ViewModel.ToggleShowAllAgentsCommand}">
-
-                <TextBlock
-                    Text="{x:Bind ViewModel.ShowAllAgents, Converter={StaticResource ShowMoreLessTextConverter}, Mode=OneWay}"
-                    Foreground="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
-            </HyperlinkButton>
-        </StackPanel>
+        </HyperlinkButton>
 
         <controls:HorizontalRule />
 
