--- a/App/Views/Pages/SignInUrlPage.xaml
+++ b/App/Views/Pages/SignInUrlPage.xaml
@@ -46,6 +46,7 @@
                 Grid.Row="0"
                 HorizontalAlignment="Stretch"
                 PlaceholderText="https://coder.example.com"
+                Loaded="{x:Bind ViewModel.CoderUrl_Loaded, Mode=OneWay}"
                 LostFocus="{x:Bind ViewModel.CoderUrl_FocusLost, Mode=OneWay}"
                 Text="{x:Bind ViewModel.CoderUrl, Mode=TwoWay}" />
 
