chore: rename CoderVPN to Coder Connect in UI

--- a/App/Views/Pages/TrayWindowLoadingPage.xaml
+++ b/App/Views/Pages/TrayWindowLoadingPage.xaml
@@ -16,7 +16,7 @@
         Spacing="10">
 
         <TextBlock
-            Text="CoderVPN"
+            Text="Coder Connect"
             FontSize="18"
             VerticalAlignment="Center" />
         <TextBlock
