--- a/App/Views/Pages/TrayWindowDisconnectedPage.xaml
+++ b/App/Views/Pages/TrayWindowDisconnectedPage.xaml
@@ -17,12 +17,12 @@
         Spacing="10">
 
         <TextBlock
-            Text="CoderVPN"
+            Text="Coder Connect"
             FontSize="18"
             VerticalAlignment="Center" />
         <TextBlock
             TextWrapping="Wrap"
-            Text="Could not connect to the CoderVPN system service." />
+            Text="Could not connect to the Coder Connect system service." />
         <TextBlock
             TextWrapping="Wrap"
             Margin="0,0,0,10"
