--- a/App/Views/Pages/FileSyncListMainPage.xaml
+++ b/App/Views/Pages/FileSyncListMainPage.xaml
@@ -274,8 +274,11 @@
                             <ColumnDefinition Width="2*" MinWidth="200" />
                             <ColumnDefinition Width="1*" MinWidth="120" />
                             <ColumnDefinition Width="2*" MinWidth="200" />
-                            <ColumnDefinition Width="1*" MinWidth="100" MaxWidth="200" />
-                            <ColumnDefinition Width="1*" MinWidth="100" MaxWidth="200" />
+                            <!--
+                                To fit the status better, the last two columns
+                                are merged for the new sync row.
+                            -->
+                            <ColumnDefinition Width="2*" MinWidth="200" MaxWidth="400" />
                         </Grid.ColumnDefinitions>
 
                         <Border Grid.Column="0" Padding="0">
@@ -339,6 +342,13 @@
                                 VerticalAlignment="Stretch"
                                 HorizontalAlignment="Stretch"
                                 Text="{x:Bind ViewModel.NewSessionRemotePath, Mode=TwoWay}" />
+                        </Border>
+                        <Border Grid.Column="4">
+                            <TextBlock
+                                Text="{x:Bind ViewModel.NewSessionStatus, Mode=OneWay}"
+                                VerticalAlignment="Center"
+                                TextTrimming="CharacterEllipsis"
+                                IsTextTrimmedChanged="TooltipText_IsTextTrimmedChanged" />
                         </Border>
                     </Grid>
                 </StackPanel>
